# t2_rust

./: Cargo.toml
migrations/: 0001_t2_cands_table.sql
src/: cli.rs  main.rs
