[package]
name = "grex_t2"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
float-ord = "0.3"
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
